Try to resolve 3D z-index bug

--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ footer {
   overflow-y: auto;
 }
 
+.perspective-buffer {
+  z-index: 5;
+}
+
 #bg-top {
   --z-translate: -16;
 
@@ -310,6 +314,10 @@ section.qrcode-promo > *:not(:first-child) {
   margin-bottom: 0;
 }
 
+#about > *:not(#floating-background) {
+  z-index: 2;
+}
+
 #about h1 {
   font-size: clamp(2.5rem, 10vw, 6rem);
   line-height: 1;
@@ -397,7 +405,7 @@ div.content > section h2 {
 
   position: sticky;
   top: -1px;
-  z-index: 1;
+  z-index: 10;
 
   padding: 0 1rem;
   margin: 0;
